Fix flaky FlingController unittests on Fuchsia.

The fling unittests are using mock clock to make sure that the tests are
stable.

Bug: 868381
Change-Id: I4bafbb71edd668ea553507c00a8784c994f49597
Reviewed-on: https://chromium-review.googlesource.com/1157291
Reviewed-by: Jonathan Ross <jonross@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Commit-Queue: Sahel Sharify <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593214}
Former-commit-id: 2d2d28fc023390086300faeb913b591839b899eb